Fixed list overflow and checkins updating of naes with swedish letters

--- a/app/assets/stylesheets/people.scss
+++ b/app/assets/stylesheets/people.scss
@@ -18,23 +18,29 @@
 
 #index_side{
   float: left;
-  width: 30%;
-  min-height: 500px;
+  min-width: 30%;
+  max-width: 40%;
+  height: 500px;
+
+  border-right: 2px solid;
   
-  border-right: 2px solid lightgray;
-  
-  //-webkit-border-image: 
-  //  -webkit-linear-gradient(rgba(0,0,0,0), gray, rgba(0,0,0,0)) 1 100%;
-  //-moz-border-image:
-  //  -moz-linear-gradient(rgba(0,0,0,0), gray, rgba(0,0,0,0)) 1 100%;    
-  //-o-border-image:
-  //  -o-linear-gradient(rgba(0,0,0,0), gray, rgba(0,0,0,0)) 1 100%;
-  //border-image:
-  //  linear-gradient(rgba(0,0,0,0), gray, rgba(0,0,0,0)) 1 100%;
+  -webkit-border-image: 
+    -webkit-linear-gradient(rgba(0,0,0,0), gray, rgba(0,0,0,0)) 1 100%;
+  -moz-border-image:
+    -moz-linear-gradient(rgba(0,0,0,0), gray, rgba(0,0,0,0)) 1 100%;    
+  -o-border-image:
+    -o-linear-gradient(rgba(0,0,0,0), gray, rgba(0,0,0,0)) 1 100%;
+  border-image:
+    linear-gradient(rgba(0,0,0,0), gray, rgba(0,0,0,0)) 1 100%;
 
 }
 
 tr.index:nth-child(even) {background-color: #f2f2f2}
+
+#index_list{
+  overflow-x: auto;
+  max-height: 90%;
+}
 
 
 #details_side{
